# ConwaysGameOfLifeRust

./: Cargo.toml  README.rd  seed.txt
src/: game.rs  gameboard_controller.rs  gameboard_view.rs  main.rs
