[package]
name = "conway"
version = "0.1.0"
authors = ["Igor Chervatyuk <ichervatyuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"
